# FooocusBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  credentials.json  docker-compose.yml  promtail-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
bot/: InstanceBot.py  RunBot.py  config.py  constants.py  logger.py  settings.py  startup.py
bot/adapters/: database.py  redis_task_storage_repository.py
bot/app/: instance.py  startup.py
bot/database/: init_schema.py  queries.sql  queryes.sql
bot/factory/: comfyui_video_service.py  get_iloveapi_service.py  iloveapi_factory.py  iloveapi_task_factory.py  image_service_factory.py  magnific_task_factory.py  magnific_upscaler_factory.py  postgres_factory.py  redis_factory.py  user_factory.py
bot/handlers/: __init__.py  hand_commands.py  hand_img2video.py  hand_magnific_upscale.py  hand_multi_image.py  hand_nsfw_video.py  hand_randomizer.py  hand_start.py  hand_startGeneration.py  hand_superadmin.py  hand_users.py  hand_videoGeneration.py
bot/helpers/: text.py
bot/keyboards/: __init__.py  userKeyboards.py
bot/middleware/: ErrorHandlingMiddleware.py  MediaGroupMiddleware.py  TextValidationMiddleware.py  UserContextMiddleware.py  __init__.py
bot/repository/: abc_task_storage_repository.py
bot/services/: base_api_client.py  task_services.py
bot/startup_tasks/: clean_temp_dirs.py  periodic_cleanup_task.py  register_commands.py  remove_old_files_in_dir.py
bot/states/: AdminState.py  RandomizerState.py  UserState.py  (+2 more)
nginx/: nginx.conf
redisdata/: dump.rdb
(+401 files in other folders)
