[project]
name = "FooocusBot"
version = "2.0"

[tool.setuptools]
packages = ["bot"]
include-package-data = true

[tool.ruff]
exclude = [
    "*/migrations/*",
    "venv/",
    "__init__.py",
    "apps.py",
]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "C", "F", "N", "COM", "I", "Q", "U", "N", "A", "RUF100"]
ignore = ["F405"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"